recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:13: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^Sierpinski:17: error: Missing closing brace `}' assumed here
}
^